--- a/research.html
+++ b/research.html
@@ -466,7 +466,7 @@ Finalist in the 2023 INFORMS Behavioral Operations Management Best Working Paper
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4276735">"Incentivizing Healthy Food Choices Using Add-on Bundling: A Field Experiment,"</a> with N. Bandi and S. Ray, Major Revision in <b>Manufacturing & Service Operations Management</b> <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4276735">"Incentivizing Healthy Food Choices Using Add-on Bundling: A Field Experiment,"</a> with N. Bandi and S. Ray, Minor Revision in <b>Manufacturing & Service Operations Management</b> <br />
 Second Place in the 2023 POMS CBOM Junior Scholar Paper Competition<br />
 </div>
 </p>
