--- a/awards.html
+++ b/awards.html
@@ -32,7 +32,7 @@
 <h3>Awards</h3>
 <ul>
 
-<li><p>2024: Finalist in the CORS Practice Prize Competition</p>
+<li><p>2024: First Place in the CORS Practice Prize Competition</p>
     
 <li><p>2024: RETHINK Retail's Top Retail Influencers</p>
 
