--- a/research.html
+++ b/research.html
@@ -520,6 +520,13 @@ Media coverage: <a href="https://theconversation.com/u-s-opportunity-zones-use-t
 </ul>
 
 <ul>
+<li><p><a href="">"Domain Adaptation for Retail Demand Prediction,"</a> with N. Tarighat and J. Clark, Submitted <br />
+</div>
+</p>
+</li>
+</ul>
+  
+<ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4502968">"Managing Multihoming Workers in the Gig Economy,"</a> with G. Allon, K. Moon, and P. Sinchaisri, Submitted <br />
 Accepted to the <i>2023 M&SOM Service Management SIG</i> <br />
 </div>
