--- a/research.html
+++ b/research.html
@@ -438,6 +438,13 @@ Media coverage: <a href="https://www.marketwatch.com/story/ipo-disclosure-is-a-m
 </ol>
 
 <ol start="43">
+<li><p> N. Bandi, M. C. Cohen, S. Ray, <a href="">"Behavioral Retail Operations: Tactics to Win Customers,"</a> <b>Foundations and Trends®</b> in Technology, Information and Operations Management, Forthcoming
+</div>
+</p>
+</li>
+</ol>
+  
+<ol start="44">
 <li><p>M. C. Cohen, G. Perakis, <a href="https://link.springer.com/chapter/10.1007/978-3-030-31733-1_4">"Optimizing Promotions for Multiple Items in Supermarkets,"</a> Channel Strategies and Marketing Mix in a Connected World, (Eds.) S. Ray and S. Yin, <b>Springer</b> Series in Supply Chain Management 9, 2020 <br />
 </div>
 </p>
