--- a/index.html
+++ b/index.html
@@ -85,8 +85,18 @@ Barnes & Noble</a>,
 Book Depository</a>,
 <a href="https://www.brownsbfs.co.uk/Product/Dube-Laurette/Precision-Retailing--Driving-Results-with-Behavioral-Insi/9781487542719">
 Browns Books</a>
+<br />
+<br />
+</b> <a href=""</a>"Behavioral Retail Operations: Tactics to Win Customers,"</a> <b>Foundations and Trends®</b> in Technology, Information and Operations Management, Forthcoming<br />
 </p>
 
+
+  <li><p> N. Bandi, M. C. Cohen, S. Ray, <a href="">","</a> <b>Foundations and Trends®</b> in Technology, Information and Operations Management, Forthcoming
+</div>
+</p>
+</li>
+</ol>
+  
 </td>
 <td>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
