--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ Book Depository</a>,
 Browns Books</a>
 <br />
 <br />
-</b> <a href=""</a>"Behavioral Retail Operations: Tactics to Win Customers,"</a> <b>Foundations and Trends®</b> in Technology, Information and Operations Management, Forthcoming<br />
+</b> <a href=""</a>"Behavioral Retail Operations: Tactics to Win Customers,"</a> <b>Foundations and Trends®</b> in Technology, Information and Operations Management, Forthcoming
 </p>
   
 </td>
