--- a/students.html
+++ b/students.html
@@ -52,9 +52,7 @@
 
 <li><p>Banafsheh Asadi (2023) - Postdoctoral fellow at McGill (co-advisor with Derek Nowrouzezahrai)</p>
   
-<li><p>Florian Golemo (2023) - Postdoctoral fellow at McGill (co-advisor with Derek Nowrouzezahrai)</p>
-  
-<li><p>Zahra Jalali (2024) - OM Ph.D. student at McGill Desautels (co-advisor with Mehmet Gumus)</p>
+<li><p>Zahra Jalali (2024) - OM Ph.D. student at McGill Desautels (co-advisor with Mehmet Gumus). First position: Amazon, Research Scientist</p>
   
 <li><p>Sandeep Chitla - OM Ph.D. student at NYU (advisor: Srikanth Jagabathula)</p>
   
