--- a/research.html
+++ b/research.html
@@ -421,30 +421,38 @@ Media coverage: <a href="https://www.marketwatch.com/story/ipo-disclosure-is-a-m
 </li>
 </ol>
 
+<ol start="41">
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4276735">"Incentivizing Healthy Food Choices Using Add-on Bundling: A Field Experiment,"</a> with N. Bandi and S. Ray, Forthcoming in <b>Manufacturing & Service Operations Management</b> <br />
+Second Place in the 2023 POMS CBOM Junior Scholar Paper Competition<br />
+</div>
+</p>
+</li>
+</ol>
+
 <h3>Books and Book Chapters</h3>
 
-<ol start="41">
+<ol start="42">
 <li><p> M. C. Cohen, P. E. Gras, A. Pentecoste, R. Zhang, <a href="https://demandprediction.github.io/index.html">"Demand Prediction in Retail - A Practical Guide to Leverage Data and Predictive Analytics,"</a> <b>Springer</b> Series in Supply Chain Management 14, 2022 (ISBN 978-3030858551)
 </div>
 </p>
 </li>
 </ol>
 
-<ol start="42">
+<ol start="43">
 <li><p> L. Dubé, M. C. Cohen, N. Yang, B. Monla (Eds.), <a href="https://utorontopress.com/9781487542719/precision-retailing/">"Precision Retailing: Driving Results with Behavioral Insights and Data Analytics,"</a> <b>University of Toronto Press</b>, 2024 (ISBN 978-1487542719)
 </div>
 </p>
 </li>
 </ol>
 
-<ol start="43">
+<ol start="44">
 <li><p> N. Bandi, M. C. Cohen, S. Ray, <a href="">"Behavioral Retail Operations: Tactics to Win Customers,"</a> <b>Foundations and Trends®</b> in Technology, Information and Operations Management, Forthcoming
 </div>
 </p>
 </li>
 </ol>
   
-<ol start="44">
+<ol start="45">
 <li><p>M. C. Cohen, G. Perakis, <a href="https://link.springer.com/chapter/10.1007/978-3-030-31733-1_4">"Optimizing Promotions for Multiple Items in Supermarkets,"</a> Channel Strategies and Marketing Mix in a Connected World, (Eds.) S. Ray and S. Yin, <b>Springer</b> Series in Supply Chain Management 9, 2020 <br />
 </div>
 </p>
@@ -467,14 +475,6 @@ Media coverage: <a href="https://delve.mcgill.ca/read/overcoming-bias-ai-technol
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4591826">"Customers' Multihoming Behavior in Ride-hailing: Empirical Evidence Using a Structural Model,"</a> with S. Chitla, S. Jagabathula, and D. Mitrofanov, Major Revision in <b>Manufacturing & Service Operations Management</b> <br />
 Accepted to the <i>2023 M&SOM Service Management SIG</i> <br />
 Finalist in the 2023 INFORMS Behavioral Operations Management Best Working Paper Competition<br />
-</div>
-</p>
-</li>
-</ul>
-
-<ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4276735">"Incentivizing Healthy Food Choices Using Add-on Bundling: A Field Experiment,"</a> with N. Bandi and S. Ray, Minor Revision in <b>Manufacturing & Service Operations Management</b> <br />
-Second Place in the 2023 POMS CBOM Junior Scholar Paper Competition<br />
 </div>
 </p>
 </li>
