--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ Browns Books</a>
   
 <br /> <br />
 My core expertise lies at the intersection of <b>data science</b> and <b>operations management</b>. I have worked on retail, ride-sharing, airline, sustainability,
-cloud computing, online advertising, peer-to-peer lending, real estate, healthcare, and conflict analytics. I have collaborated with many companies including Google AI, Waze, Microsoft, Meta, Uber, Oracle Retail, IBM Research, Via, Spotify, Aldo Group, Couche-Tard/Circle K, Loblaws, Canadian Tire, L'Oréal, Cargo, and Staples and I serve on the advisory board of several startups. In each project, I have worked closely with the company to develop solutions 
+cloud computing, online advertising, peer-to-peer lending, real estate, healthcare, and conflict analytics. I have collaborated with many companies including Google AI, Microsoft, Meta, Uber, Waze, Oracle Retail, IBM Research, Via, Spotify, Aldo Group, Couche-Tard/Circle K, Loblaws, Canadian Tire, L'Oréal, Cargo, and Staples and I serve on the advisory board of several startups. In each project, I have worked closely with the company to develop solutions 
 using tools such as machine learning, optimization, stochastic modeling, econometrics, and field experiments.  <!--I currently serve as a senior editor for the <a href="http://www.poms.org/journal/"</a>POMS</a> journal. -->
 
 <br /> <br />
