--- a/research.html
+++ b/research.html
@@ -518,9 +518,16 @@ Media coverage: <a href="https://theconversation.com/u-s-opportunity-zones-use-t
 </p>
 </li>
 </ul>
+
+<ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4914875"> "Motivating Runners in Real Time: A Field Experiment,"</a> with D. Kim, Y. Son, and W. Khern-am-nuai, Submitted <font color="red"<b>(NEW)</b></font> <br />
+</div>
+</p>
+</li>
+</ul>
   
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4722923"> "A General Framework for Robust Individualized Decision Learning with Sensitive Variables,"</a> with X. Tan, Z. Qi, and L. Tang, Submitted <font color="red"<b>(NEW)</b></font> <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4722923"> "A General Framework for Robust Individualized Decision Learning with Sensitive Variables,"</a> with X. Tan, Z. Qi, and L. Tang, Submitted <br />
 </div>
 </p>
 </li>
