--- a/research.html
+++ b/research.html
@@ -429,6 +429,13 @@ Media coverage: <a href="https://www.marketwatch.com/story/ipo-disclosure-is-a-m
 </li>
 </ol>
 
+<ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4918822"> "AI Medical Scribes: A Revolution in Healthcare Documentation,"</a> with E. Toubiana <font color="red"<b>(NEW)</b></font> <br />
+</div>
+</p>
+</li>
+</ul>
+
 <h3>Books and Book Chapters</h3>
 
 <ol start="42">
