--- a/research.html
+++ b/research.html
@@ -430,7 +430,7 @@ Media coverage: <a href="https://www.marketwatch.com/story/ipo-disclosure-is-a-m
 </ol>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4918822"> "AI Medical Scribes: A Revolution in Healthcare Documentation,"</a> with E. Toubiana <font color="red"<b>(NEW)</b></font> <br />
+<li><p><a href="https://maxccohen.github.io/AI-Medical-Scribes.pdf"> "AI Medical Scribes: A Revolution in Healthcare Documentation,"</a> with E. Toubiana <font color="red"<b>(NEW)</b></font> <br />
 </div>
 </p>
 </li>
