--- a/research.html
+++ b/research.html
@@ -550,6 +550,7 @@ Media coverage: <a href="https://delve.mcgill.ca/read/could-new-algorithms-ensur
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4502968">"Managing Multihoming Workers in the Gig Economy,"</a> with G. Allon, K. Moon, and P. Sinchaisri, Submitted <br />
 Accepted to the <i>2023 M&SOM Service Management SIG</i> <br />
+Finalist in the 2024 INFORMS TIMES Best Working Paper Competition <br />
 </div>
 </p>
 </li>
