--- a/research.html
+++ b/research.html
@@ -480,7 +480,7 @@ Media coverage: <a href="https://www.marketwatch.com/story/ipo-disclosure-is-a-m
 <h3>Under Review and Working Papers</h3>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3389631">"Addressing Fairness in Machine Learning Predictions: Strategic Best-Response Fair Discriminant Removed Algorithm,"</a> with H. Shimao, W. Khern-am-nuai, and K. Kannan, 3rd Major Revision in <b>Information Systems Research</b> <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3389631">"Strategic Best-Response Fairness Framework for Fair Machine Learning,"</a> with H. Shimao, W. Khern-am-nuai, and K. Kannan, 3rd Major Revision in <b>Information Systems Research</b> <br />
 Published in the 2022 AAAI/ACM Conference on Artificial Intelligence, Ethics, and Society <br />
 Media coverage: <a href="https://delve.mcgill.ca/read/overcoming-bias-ai-technologies/">Delve</a> <br />
 </div>
@@ -511,21 +511,21 @@ Media coverage: <a href="https://delve.mcgill.ca/read/could-new-algorithms-ensur
 </p>
 </li>
 </ul>
-  
+
+<ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4778848"> "Motivating Runners in Real Time: A Field Experiment,"</a> with D. Kim, Y. Son, and W. Khern-am-nuai, Major Revision in <b>Operations Research</b> <br />
+</div>
+</p>
+</li>
+</ul>
+
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4764418"> "Generative AI and Price Discrimination in the Housing Market,"</a> with J. Tanlamai and W. Khern-am-nuai, Submitted <font color="red"<b>(NEW)</b></font> <br />
 </div>
 </p>
 </li>
 </ul>
-
-<ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4778848"> "Motivating Runners in Real Time: A Field Experiment,"</a> with D. Kim, Y. Son, and W. Khern-am-nuai, Submitted <font color="red"<b>(NEW)</b></font> <br />
-</div>
-</p>
-</li>
-</ul>
-
+  
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4914875"> "Parking at the Right Spot: Crowdsourcing-Based Promotions for Electric Scooters,"</a> with D. Kim, Y. Son, and W. Khern-am-nuai, Submitted <font color="red"<b>(NEW)</b></font> <br />
 </div>
