--- a/students.html
+++ b/students.html
@@ -91,18 +91,18 @@
 <li><p>Niloofar Tarighat (2022) - M.S. in Electrical and Computer Engineering at McGill (co-advisor with James Clark). First position: Data Scientist at CIBC</p>
 
 <li><p>Uzair Ahmad (2022) - McGill Master in Analytics. First position: Data Scientist at ELNA Medical</p>
+
+<li><p>Huzbah Jagirdar (2022) - McGill UG Honours Economics Student. First position: Graduate Student, McGill Epidemiology</p>    
   
+<li><p>Erwan Makame (2023) - McGill UG Student in Management. First position: Strategy Analyst at Accenture</p>  
+
+<li><p>Samara Milstein (2024) - McGill UG Student in Biomedical Sciences. First position: Student Researcher at the MUHC</p>    
+  
+<li><p>Barry Li (2024) - McGill UG Student in Computer Science. First position: Graduate student, MIT Sloan Master of Business Analytics</p> 
+
 <li><p>Ken Lee - M.S. in Computer Science at McGill (co-advisor with Derek Nowrouzezahrai)</p> 
 
-<li><p>Tony Xu - M.S. in Electrical and Computer Engineering at McGill (co-advisor with James Clark)</p> 
-  
-<li><p>Huzbah Jagirdar - McGill UG Honours Economics Student</p>    
-  
-<li><p>Samara Milstein - McGill UG Student in Biomedical Sciences</p>    
-  
-<li><p>Erwan Makame - McGill UG Student in Management</p>   
-
-<li><p>Barry Li - McGill UG Student in Computer Science</p> 
+<li><p>Tony Xu - M.S. in Electrical and Computer Engineering at McGill (co-advisor with James Clark)</p>  
 
 
 <!--Page generated 2009-08-14 17:53:09 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.-->
