--- a/research.html
+++ b/research.html
@@ -570,17 +570,18 @@ Accepted to the <i>2024 M&SOM Service Management SIG</i> <br />
 </p>
 </li>
 </ul>
+
+  
+<ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4100842">"Offline-Online Retail Collaboration via Pickup Partnership,"</a> with Z. Jalali, N. Ertekin, and M. Gumus, Submitted <br /> 
+</div>
+</p>
+</li>
+</ul>
   
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4275804">"Myopic Price Promotions in IPOs: Evidence from Ride-Hailing Platforms,"</a> with A. Borah and D. Mitrofanov, Working paper <br />
 </div>
-</li>
-</ul>
-
-<ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4100842">"Offline-Online Retail Collaboration via Pickup Partnership,"</a> with Z. Jalali, N. Ertekin, and M. Gumus, Working paper <br /> 
-</div>
-</p>
 </li>
 </ul>
 
