--- a/research.html
+++ b/research.html
@@ -446,30 +446,46 @@ Media coverage: <a href="https://www.marketwatch.com/story/ipo-disclosure-is-a-m
 </li>
 </ul>
 
-<h3>Books and Book Chapters</h3>
+<h3>White Papers</h3>
 
 <ol start="43">
-<li><p> M. C. Cohen, P. E. Gras, A. Pentecoste, R. Zhang, <a href="https://demandprediction.github.io/index.html">"Demand Prediction in Retail - A Practical Guide to Leverage Data and Predictive Analytics,"</a> <b>Springer</b> Series in Supply Chain Management 14, 2022 (ISBN 978-3030858551)
+<li><p><a href="https://maxccohen.github.io/AI-Medical-Scribes.pdf"> "AI Medical Scribes: A Revolution in Healthcare Documentation,"</a> with E. Toubiana, July 2024 <br />
 </div>
 </p>
 </li>
 </ol>
 
 <ol start="44">
+<li><p><a href="https://aiisgoodforus.com/"> "AI: What Is It and Why Is It Good for Us and for Society?"</a> the “AI is Good for Us” white paper, available at www.AIisGoodforUs.com, September 2024 <br />
+</div>
+</p>
+</li>
+</ol>
+  
+<h3>Books and Book Chapters</h3>
+
+<ol start="45">
+<li><p> M. C. Cohen, P. E. Gras, A. Pentecoste, R. Zhang, <a href="https://demandprediction.github.io/index.html">"Demand Prediction in Retail - A Practical Guide to Leverage Data and Predictive Analytics,"</a> <b>Springer</b> Series in Supply Chain Management 14, 2022 (ISBN 978-3030858551)
+</div>
+</p>
+</li>
+</ol>
+
+<ol start="46">
 <li><p> L. Dubé, M. C. Cohen, N. Yang, B. Monla (Eds.), <a href="https://utorontopress.com/9781487542719/precision-retailing/">"Precision Retailing: Driving Results with Behavioral Insights and Data Analytics,"</a> <b>University of Toronto Press</b>, 2024 (ISBN 978-1487542719)
 </div>
 </p>
 </li>
 </ol>
 
-<ol start="45">
+<ol start="47">
 <li><p> N. Bandi, M. C. Cohen, S. Ray, <a href="">"Behavioral Retail Operations: Tactics to Win Customers,"</a> <b>Foundations and Trends®</b> in Technology, Information and Operations Management, Forthcoming
 </div>
 </p>
 </li>
 </ol>
   
-<ol start="46">
+<ol start="48">
 <li><p>M. C. Cohen, G. Perakis, <a href="https://link.springer.com/chapter/10.1007/978-3-030-31733-1_4">"Optimizing Promotions for Multiple Items in Supermarkets,"</a> Channel Strategies and Marketing Mix in a Connected World, (Eds.) S. Ray and S. Yin, <b>Springer</b> Series in Supply Chain Management 9, 2020 <br />
 </div>
 </p>
