--- a/research.html
+++ b/research.html
@@ -439,13 +439,6 @@ Media coverage: <a href="https://www.marketwatch.com/story/ipo-disclosure-is-a-m
 </li>
 </ol>
 
-<ul>
-<li><p><a href="https://maxccohen.github.io/AI-Medical-Scribes.pdf"> "AI Medical Scribes: A Revolution in Healthcare Documentation,"</a> with E. Toubiana <font color="red"<b>(NEW)</b></font> <br />
-</div>
-</p>
-</li>
-</ul>
-
 <h3>White Papers</h3>
 
 <ol start="43">
@@ -456,7 +449,7 @@ Media coverage: <a href="https://www.marketwatch.com/story/ipo-disclosure-is-a-m
 </ol>
 
 <ol start="44">
-<li><p><a href="https://aiisgoodforus.com/"> "AI: What Is It and Why Is It Good for Us and for Society?"</a> the “AI is Good for Us” white paper, available at www.AIisGoodforUs.com, September 2024 <br />
+<li><p><a href="https://aiisgoodforus.com/"> "AI: What Is It and Why Is It Good for Us and for Society?"</a> <b>the “AI is Good for Us” white paper</b>, available at <a href="https://aiisgoodforus.com/"> www.AIisGoodforUs.com</a>, September 2024 <br />
 </div>
 </p>
 </li>
