--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Director of Artificial Intelligence @<a href="https://integral.partners/"</a> In
 Scientific Advisor in AI and Data Science @<a href="https://ivadolabs.com/"</a> IVADO Labs </a> <br />
 Associate Director for Strategy and Partnership @<a href="https://conflictanalytics.queenslaw.ca/"</a> Conflict Analytics Lab</a> <br />
 Scientific Director @<a href="https://myopencourt.org/"</a> MyOpenCourt.org</a> <br />
-Advisor or investor for startups: <a href="https://www.intelligems.io/"</a>Intelligems</a>, <a href="https://www.leav.co/"</a>Leav</a>, <a href="https://cherre.com/"</a>Cherre</a>, <a href="https://www.supplyve.com/"</a>Supplyve</a>, <a href="https://www.scribemd.ai/"</a>ScribeMD</a> <br />
+Advisor or investor for startups: <a href="https://www.intelligems.io/"</a>Intelligems</a>, <a href="https://www.bluequbit.io/"</a>BlueQubit</a>, <a href="https://www.leav.co/"</a>Leav</a>, <a href="https://cherre.com/"</a>Cherre</a>, <a href="https://www.supplyve.com/"</a>Supplyve</a>, <a href="https://www.scribemd.ai/"</a>ScribeMD</a> <br />
 <br />
 <b>Books:<br />
 </b> <a href="https://demandprediction.github.io/index.html"</a>"Demand Prediction in Retail - A Practical Guide to Leverage Data and Predictive Analytics,"</a> <b>Springer</b> Series in Supply Chain Management 14, 2022 (ISBN 978-3030858551)<br />
