--- a/research.html
+++ b/research.html
@@ -485,6 +485,23 @@ Media coverage: <a href="https://www.marketwatch.com/story/ipo-disclosure-is-a-m
 </li>
 </ol>
 
+<h3>Conference Publications</h3>
+
+<ol start="49">
+<li><p><a href="https://maxccohen.github.io/CohenShimkin2010.pdf">"Decentralized Algorithms for Sequential Network Time Synchronization,"</a> with N. Shimkin, Proc. NETCOOP, 4<sup>th</sup> Workshop on Network Control and Optimization, Ghent, Belgium, Dec. 2010, pp. 97-104 <br />
+</div>
+</p>
+</li>
+</ol>
+
+<ol start="50">
+<li><p><a href="https://maxccohen.github.io/SunSailorArt19nov06.pdf">"Sunsailor: Solar Powered UAV,"</a> with S. Tsach, L. Ankri, Y. Ehrlich, T. Goldenberg, H. Levy, I. Regev, A. Vladimirsky, A. 
+Weider, and Z. Yossef, Proc. 47<sup>th</sup> Israel Annual Conf. on Aerospace Sciences, Feb. 2007 <br />
+First price at the 2007 Technion Creativity in Science and Technology competition, Best student project in the 47th Israel Annual Conference on Aerospace Sciences <br />
+</div>
+</p>
+</li>
+</ol>
 
 <h3>Under Review and Working Papers</h3>
 
@@ -632,24 +649,6 @@ First Place in the 2015 Best Student Paper POM Supply Chain <br />
 
 -->
 
-
-<h3>Conference Publications</h3>
-
-<ul>
-<li><p><a href="https://maxccohen.github.io/CohenShimkin2010.pdf">"Decentralized Algorithms for Sequential Network Time Synchronization,"</a> with N. Shimkin, Proc. NETCOOP, 4<sup>th</sup> Workshop on Network Control and Optimization, Ghent, Belgium, Dec. 2010, pp. 97-104 <br />
-</div>
-</p>
-</li>
-</ul>
-
-<ul>
-<li><p><a href="https://maxccohen.github.io/SunSailorArt19nov06.pdf">"Sunsailor: Solar Powered UAV,"</a> with S. Tsach, L. Ankri, Y. Ehrlich, T. Goldenberg, H. Levy, I. Regev, A. Vladimirsky, A. 
-Weider, and Z. Yossef, Proc. 47<sup>th</sup> Israel Annual Conf. on Aerospace Sciences, Feb. 2007 <br />
-First price at the 2007 Technion Creativity in Science and Technology competition, Best student project in the 47th Israel Annual Conference on Aerospace Sciences <br />
-</div>
-</p>
-</li>
-</ul>
 
 <h3>Theses</h3>
 
