--- a/research.html
+++ b/research.html
@@ -449,7 +449,7 @@ Media coverage: <a href="https://www.marketwatch.com/story/ipo-disclosure-is-a-m
 </ol>
 
 <ol start="44">
-<li><p><a href="https://aiisgoodforus.com/"> "AI: What Is It and Why Is It Good for Us and for Society?"</a> <b>the “AI is Good for Us” white paper</b>, available at <a href="https://aiisgoodforus.com/"> www.AIisGoodforUs.com</a>, September 2024 <br />
+<li><p><a href="https://aiisgoodforus.com/"> "AI: What Is It and Why Is It Good for Us and for Society?"</a> <b>the AI Is Good for Us White Paper</b>, available at <a href="https://aiisgoodforus.com/"> www.AIisGoodforUs.com</a>, September 2024 <br />
 </div>
 </p>
 </li>
