--- a/students.html
+++ b/students.html
@@ -100,6 +100,8 @@
   
 <li><p>Barry Li (2024) - McGill UG Student in Computer Science. First position: Graduate student, MIT Sloan Master of Business Analytics</p> 
 
+<li><p>Shuo Yang (2024) - McGill UG Student in Economics</p> 
+    
 <li><p>Ken Lee - M.S. in Computer Science at McGill (co-advisor with Derek Nowrouzezahrai)</p> 
 
 <li><p>Tony Xu - M.S. in Electrical and Computer Engineering at McGill (co-advisor with James Clark)</p>  
