--- a/research.html
+++ b/research.html
@@ -439,16 +439,24 @@ Media coverage: <a href="https://www.marketwatch.com/story/ipo-disclosure-is-a-m
 </li>
 </ol>
 
+<ol start="43">
+<li><p><a href="https://maxccohen.github.io/Algorithmic-vs-GenAI-Pricing.pdf"> "Assessing Algorithmic Versus Generative AI Pricing Tools,"</a> with T. Spittle and J. Royer, Law360, 2024 <br />
+Media coverage: <a href="https://www.analysisgroup.com/news-and-events/news/a-pricing-tool-for-the-masses-analysis-group-authors-explore-the-use-of-llms-for-pricing-design-in-law360-article/">Analysis Group</a> <br />
+</div>
+</p>
+</li>
+</ol>
+
 <h3>White Papers</h3>
 
-<ol start="43">
+<ol start="44">
 <li><p><a href="https://maxccohen.github.io/AI-Medical-Scribes.pdf"> "AI Medical Scribes: A Revolution in Healthcare Documentation,"</a> with E. Toubiana, July 2024 <br />
 </div>
 </p>
 </li>
 </ol>
 
-<ol start="44">
+<ol start="45">
 <li><p><a href="https://aiisgoodforus.com/"> "AI: What Is It and Why Is It Good for Us and for Society?"</a> <b>the AI Is Good for Us White Paper</b>, available at <a href="https://aiisgoodforus.com/"> www.AIisGoodforUs.com</a>, September 2024 <br />
 </div>
 </p>
@@ -457,28 +465,28 @@ Media coverage: <a href="https://www.marketwatch.com/story/ipo-disclosure-is-a-m
   
 <h3>Books and Book Chapters</h3>
 
-<ol start="45">
+<ol start="46">
 <li><p> M. C. Cohen, P. E. Gras, A. Pentecoste, R. Zhang, <a href="https://demandprediction.github.io/index.html">"Demand Prediction in Retail - A Practical Guide to Leverage Data and Predictive Analytics,"</a> <b>Springer</b> Series in Supply Chain Management 14, 2022 (ISBN 978-3030858551)
 </div>
 </p>
 </li>
 </ol>
 
-<ol start="46">
+<ol start="47">
 <li><p> L. Dubé, M. C. Cohen, N. Yang, B. Monla (Eds.), <a href="https://utorontopress.com/9781487542719/precision-retailing/">"Precision Retailing: Driving Results with Behavioral Insights and Data Analytics,"</a> <b>University of Toronto Press</b>, 2024 (ISBN 978-1487542719)
 </div>
 </p>
 </li>
 </ol>
 
-<ol start="47">
+<ol start="48">
 <li><p> N. Bandi, M. C. Cohen, S. Ray, <a href="">"Behavioral Retail Operations: Tactics to Win Customers,"</a> <b>Foundations and Trends®</b> in Technology, Information and Operations Management, Forthcoming
 </div>
 </p>
 </li>
 </ol>
   
-<ol start="48">
+<ol start="49">
 <li><p>M. C. Cohen, G. Perakis, <a href="https://link.springer.com/chapter/10.1007/978-3-030-31733-1_4">"Optimizing Promotions for Multiple Items in Supermarkets,"</a> Channel Strategies and Marketing Mix in a Connected World, (Eds.) S. Ray and S. Yin, <b>Springer</b> Series in Supply Chain Management 9, 2020 <br />
 </div>
 </p>
@@ -487,14 +495,14 @@ Media coverage: <a href="https://www.marketwatch.com/story/ipo-disclosure-is-a-m
 
 <h3>Conference Publications</h3>
 
-<ol start="49">
+<ol start="50">
 <li><p><a href="https://maxccohen.github.io/CohenShimkin2010.pdf">"Decentralized Algorithms for Sequential Network Time Synchronization,"</a> with N. Shimkin, Proc. NETCOOP, 4<sup>th</sup> Workshop on Network Control and Optimization, Ghent, Belgium, Dec. 2010, pp. 97-104 <br />
 </div>
 </p>
 </li>
 </ol>
 
-<ol start="50">
+<ol start="51">
 <li><p><a href="https://maxccohen.github.io/SunSailorArt19nov06.pdf">"Sunsailor: Solar Powered UAV,"</a> with S. Tsach, L. Ankri, Y. Ehrlich, T. Goldenberg, H. Levy, I. Regev, A. Vladimirsky, A. 
 Weider, and Z. Yossef, Proc. 47<sup>th</sup> Israel Annual Conf. on Aerospace Sciences, Feb. 2007 <br />
 First price at the 2007 Technion Creativity in Science and Technology competition, Best student project in the 47th Israel Annual Conference on Aerospace Sciences <br />
