--- a/awards.html
+++ b/awards.html
@@ -33,6 +33,8 @@
 <ul>
 
 <li><p>2024: Finalist in the INFORMS TIMES Best Working Paper Competition</p>
+
+<li><p>2024: Nominee for Best Paper Award, Conference on Information Systems and Technology (CIST)</p>
   
 <li><p>2024: First Place in the CORS Practice Prize Competition</p>
     
