--- a/research.html
+++ b/research.html
@@ -547,7 +547,7 @@ Finalist in the 2023 INFORMS Behavioral Operations Management Best Working Paper
 </ul>
   
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3930622">"Dynamic Pricing with Fairness Constraints,"</a> with S. Miao and Y. Wang, Major Revision in <b>Operations Research</b> <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3930622">"Dynamic Pricing with Fairness Constraints,"</a> with S. Miao and Y. Wang, Minor Revision in <b>Operations Research</b> <br />
 Media coverage: <a href="https://delve.mcgill.ca/read/could-new-algorithms-ensure-everyone-pays-fair-prices-online/">Delve</a> <br />
 </div>
 </p>
