--- a/research.html
+++ b/research.html
@@ -365,7 +365,7 @@ Media coverage: <a href="https://theconversation.com/u-s-opportunity-zones-use-t
 </ol>
 
 <ol start="33">
-<li><p><a href="">"When Platforms Go Public, Standards Drop,"</a> with G. Lapierre-Berger and J. C. Serpa, Conditionally Accepted in <b>Production and Operations Management</b> <br />
+<li><p><a href="">"When Platforms Go Public, Standards Drop,"</a> with G. Lapierre-Berger and J. C. Serpa, Forthcoming in <b>Production and Operations Management</b> <br />
 </div>
 </p>
 </li>
