--- a/awards.html
+++ b/awards.html
@@ -32,6 +32,8 @@
 <h3>Awards</h3>
 <ul>
 
+<li><p>2024: Top 2% of most cited authors in 2023 in both Operations Research and Business & Management</p>
+  
 <li><p>2024: Finalist in the INFORMS TIMES Best Working Paper Competition</p>
 
 <li><p>2024: Nominee for Best Paper Award, Conference on Information Systems and Technology (CIST)</p>
