--- a/awards.html
+++ b/awards.html
@@ -32,7 +32,7 @@
 <h3>Awards</h3>
 <ul>
 
-<li><p>2024: Top 2% of most cited authors in 2023 in both Operations Research and Business & Management</p>
+<li><p>2024: Top 2% of most cited authors in 2023 in both Business & Management and Operations Research</p>
   
 <li><p>2024: Finalist in the INFORMS TIMES Best Working Paper Competition</p>
 
