--- a/students.html
+++ b/students.html
@@ -106,6 +106,8 @@
 
 <li><p>Tony Xu - M.S. in Electrical and Computer Engineering at McGill (co-advisor with James Clark)</p>  
 
+<li><p>Eddy Hage-Youssef - McGill UG Student in Computer Science</p>  
+
 
 <!--Page generated 2009-08-14 17:53:09 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.-->
 </div>
