--- a/research.html
+++ b/research.html
@@ -597,7 +597,7 @@ Finalist in the 2023 INFORMS Behavioral Operations Management Best Working Paper
 </ul>
   
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4502968">"Managing Multihoming Workers in the Gig Economy,"</a> with G. Allon, K. Moon, and P. Sinchaisri, Submitted <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4502968">"Managing Multihoming Workers in the Gig Economy,"</a> with G. Allon, K. Moon, and P. Sinchaisri, Working paper <br />
 Accepted to the <i>2023 M&SOM Service Management SIG</i> <br />
 Finalist in the 2024 INFORMS TIMES Best Working Paper Competition <br />
 </div>
@@ -606,7 +606,7 @@ Finalist in the 2024 INFORMS TIMES Best Working Paper Competition <br />
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4476326">"Vertical Product Location Effect on Sales: A Field Experiment in Convenience Stores,"</a> with Z. Jalali, N. Ertekin, and M. Gumus, Submitted <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4476326">"Vertical Product Location Effect on Sales: A Field Experiment in Convenience Stores,"</a> with Z. Jalali, N. Ertekin, and M. Gumus, Working paper <br />
 Accepted to the <i>2024 M&SOM Service Management SIG</i> <br />
 </div>
 </p>
@@ -615,7 +615,7 @@ Accepted to the <i>2024 M&SOM Service Management SIG</i> <br />
 
   
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4100842">"Offline-Online Retail Collaboration via Pickup Partnership,"</a> with Z. Jalali, N. Ertekin, and M. Gumus, Submitted <br /> 
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4100842">"Offline-Online Retail Collaboration via Pickup Partnership,"</a> with Z. Jalali, N. Ertekin, and M. Gumus, Working paper <br /> 
 </div>
 </p>
 </li>
