--- a/awards.html
+++ b/awards.html
@@ -34,7 +34,7 @@
 
 <li><p>2024: Top 2% of most cited authors in 2023 in both Business & Management and Operations Research</p>
   
-<li><p>2024: Finalist in the INFORMS TIMES Best Working Paper Competition</p>
+<li><p>2024: Second Place in the INFORMS TIMES Best Working Paper Competition</p>
 
 <li><p>2024: Nominee for Best Paper Award, Conference on Information Systems and Technology (CIST)</p>
   
