--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ Book Depository</a>,
 Browns Books</a>
 <br />
 <br />
-</b> <a href=""</a>"Behavioral Retail Operations: Tactics to Win Customers,"</a> <b>Foundations and Trends®</b> in Technology, Information and Operations Management, Forthcoming
+</b> <a href="https://www.nowpublishers.com/article/Details/TOM-111"</a>"Behavioral Retail Operations: Tactics to Win Customers,"</a> <b>Foundations and Trends®</b> in Technology, Information and Operations Management, 2024 (ISBN 978-1-63828-437-6)
 </td>
 <td>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
