--- a/research.html
+++ b/research.html
@@ -504,7 +504,7 @@ Media coverage: <a href="https://www.analysisgroup.com/news-and-events/news/a-pr
 </ol>
 
 <ol start="51">
-<li><p> N. Bandi, M. C. Cohen, S. Ray, <a href="">"Behavioral Retail Operations: Tactics to Win Customers,"</a> <b>Foundations and Trends®</b> in Technology, Information and Operations Management, Forthcoming
+<li><p> N. Bandi, M. C. Cohen, S. Ray, <a href="https://www.nowpublishers.com/article/Details/TOM-111">"Behavioral Retail Operations: Tactics to Win Customers,"</a> <b>Foundations and Trends®</b> in Technology, Information and Operations Management, 2024 (ISBN 978-1-63828-437-6)
 </div>
 </p>
 </li>
