--- a/research.html
+++ b/research.html
@@ -347,7 +347,7 @@ Finalist in the 2021 INFORMS Service Science Best Cluster Paper Award <br />
 </ol>
 
 <ol start="31">
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4276735">"Incentivizing Healthy Food Choices Using Add-on Bundling: A Field Experiment,"</a> with N. Bandi and S. Ray, Forthcoming in <b>Manufacturing & Service Operations Management</b> <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4276735">"Incentivizing Healthy Food Choices Using Add-on Bundling: A Field Experiment,"</a> with N. Bandi and S. Ray, <b>Manufacturing & Service Operations Management</b>, 26(6):1981-2014, 2024 <br />
 Second Place in the 2023 POMS CBOM Junior Scholar Paper Competition<br />
 </div>
 </p>
@@ -355,7 +355,7 @@ Second Place in the 2023 POMS CBOM Junior Scholar Paper Competition<br />
 </ol>
 
 <ol start="32">
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3780241">"The Impact of the Opportunity Zone Program on Residential Real Estate,"</a> with R. Bekkerman, X. Liu, J. Maiden, and D. Mitrofanov, Forthcoming in <b>Manufacturing & Service Operations Management</b> <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3780241">"The Impact of the Opportunity Zone Program on Residential Real Estate,"</a> with R. Bekkerman, X. Liu, J. Maiden, and D. Mitrofanov, <b>Manufacturing & Service Operations Management</b>, 26(6):2142-2159, 2024 <br />
 Accepted to the <i>2023 M&SOM Technology, Innovation, and Entrepreneurship SIG</i> <br />
 Finalist in the 2023 INFORMS Service Science DEIJ Paper Competition <br />
 Media coverage: <a href="https://theconversation.com/u-s-opportunity-zones-use-tax-breaks-for-developers-to-help-poor-neighbourhoods-but-are-they-choosing-wisely-165034">The Conversation</a>, <a href="https://www.propmodo.com/the-high-price-of-opportunity-zones/">Propmodo</a>, <a href="https://www.ejeprime.com/mercado/opportunity-zones-el-urbanismo-tax-free-de-trump-en-la-cuerda-floja.html">EjePrime</a> (in Spanish) <br />
