--- a/index.html
+++ b/index.html
@@ -65,8 +65,6 @@ Amazon.fr</a>,
 Springer</a>,
   <a href="https://www.barnesandnoble.com/w/demand-prediction-in-retail-maxime-c-cohen/1139909793?ean=9783030858544">
 Barnes & Noble</a>,
-  <a href="https://www.bookdepository.com/Demand-Prediction-in-Retail-Maxime-C-Cohen-Paul-Emile-Gras-Arthur-Pentecoste-Renyu-Zhang/9783030858544">
-Book Depository</a>,
   <a href="https://www.brownsbfs.co.uk/Product/Cohen-Maxime-C/Demand-Prediction-in-Retail--A-Practical-Guide-to-Leverag/9783030858544">
 Browns Books</a>
 <br />
@@ -81,13 +79,20 @@ Amazon.ca</a>,
 University of Toronto Press</a>,
 <a href="https://www.barnesandnoble.com/w/precision-retailing-laurette-dub/1143224205?ean=9781487542719">
 Barnes & Noble</a>,
-<a href="https://www.bookdepository.com/Precision-Retailing-Laurette-Dube/9781487542719?ref=grid-view&qid=1680528697434&sr=1-1">
-Book Depository</a>,
 <a href="https://www.brownsbfs.co.uk/Product/Dube-Laurette/Precision-Retailing--Driving-Results-with-Behavioral-Insi/9781487542719">
 Browns Books</a>
 <br />
 <br />
 </b> <a href="https://www.nowpublishers.com/article/Details/TOM-111"</a>"Behavioral Retail Operations: Tactics to Win Customers,"</a> <b>Foundations and Trends®</b> in Technology, Information and Operations Management, 2024 (ISBN 978-1-63828-437-6)
+Buy the book: 
+<a href="https://a.co/d/eYMtIRL">
+Amazon.com</a>, 
+<a href="https://a.co/d/0XeDuAN"> 
+Amazon.ca</a>,
+<a href="https://www.nowpublishers.com/Order/BuyBook?isbn=978-1-63828-436-9">  
+Now Publishers</a>,
+<a href="https://www.barnesandnoble.com/w/behavioral-retail-operations-nymisha-bandi/1146554934?ean=9781638284369">
+Barnes & Noble</a>
 </td>
 <td>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
