--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Barnes & Noble</a>,
 Browns Books</a>
 <br />
 <br />
-</b> <a href="https://www.nowpublishers.com/article/Details/TOM-111"</a>"Behavioral Retail Operations: Tactics to Win Customers,"</a> <b>Foundations and Trends®</b> in Technology, Information and Operations Management, 2024 (ISBN 978-1-63828-437-6)
+</b> <a href="https://www.nowpublishers.com/article/Details/TOM-111"</a>"Behavioral Retail Operations: Tactics to Win Customers,"</a> <b>Foundations and Trends®</b> in Technology, Information and Operations Management, 2024 (ISBN 978-1-63828-437-6)<br />
 Buy the book: 
 <a href="https://a.co/d/eYMtIRL">
 Amazon.com</a>, 
