--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@ Amazon.ca</a>,
 <a href="https://www.nowpublishers.com/Order/BuyBook?isbn=978-1-63828-436-9">  
 Now Publishers</a>,
 <a href="https://www.barnesandnoble.com/w/behavioral-retail-operations-nymisha-bandi/1146554934?ean=9781638284369">
-Barnes & Noble</a>
+Barnes & Noble</a>,
+<a href="https://www.brownsbfs.co.uk/Product/Bandi-Nymisha/Behavioral-Retail-Operations/9781638284369">
+Browns Books</a>
 </td>
 <td>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
