--- a/research.html
+++ b/research.html
@@ -349,7 +349,7 @@ Finalist in the 2021 INFORMS Service Science Best Cluster Paper Award <br />
 <ol start="31">
 <li><p><a href="https://maxccohen.github.io/Incentivizing-Healthy-Food-Choices.pdf">"Incentivizing Healthy Food Choices Using Add-on Bundling: A Field Experiment,"</a> with N. Bandi and S. Ray, <b>Manufacturing & Service Operations Management</b>, 26(6):1981-2014, 2024 <br />
 <a href="https://maxccohen.github.io/Incentivizing-Healthy-Food-Choices-Appendix.pdf">Online Appendix</a> <br />
-Second Place in the 2023 POMS CBOM Junior Scholar Paper Competition<br /> <br />
+Second Place in the 2023 POMS CBOM Junior Scholar Paper Competition <br />
 Media coverage: <a href="https://www.mcgill.ca/newsroom/channels/news/retailers-boost-profits-while-improving-eating-habits-clientele-361742">McGill Newsroom</a> <br />
 </div>
 </p>
