--- a/research.html
+++ b/research.html
@@ -361,7 +361,7 @@ Media coverage: <a href="https://www.mcgill.ca/newsroom/channels/news/retailers-
 <a href="https://maxccohen.github.io/Impact-Opportunity-Zone-Program-Appendix.pdf">Online Appendix</a> <br />
 Accepted to the <i>2023 M&SOM Technology, Innovation, and Entrepreneurship SIG</i> <br />
 Finalist in the 2023 INFORMS Service Science DEIJ Paper Competition <br />
-Media coverage: <a href="https://theconversation.com/u-s-opportunity-zones-use-tax-breaks-for-developers-to-help-poor-neighbourhoods-but-are-they-choosing-wisely-165034">The Conversation</a>, <a href="https://www.propmodo.com/the-high-price-of-opportunity-zones/">Propmodo</a>, <a href="https://www.ejeprime.com/mercado/opportunity-zones-el-urbanismo-tax-free-de-trump-en-la-cuerda-floja.html">EjePrime</a> (in Spanish) <br />
+Media coverage: <a href="https://theconversation.com/u-s-opportunity-zones-use-tax-breaks-for-developers-to-help-poor-neighbourhoods-but-are-they-choosing-wisely-165034">The Conversation</a>, <a href="https://www.propmodo.com/the-high-price-of-opportunity-zones/">Propmodo</a>, <a href="https://www.ejeprime.com/mercado/opportunity-zones-el-urbanismo-tax-free-de-trump-en-la-cuerda-floja.html">EjePrime (in Spanish)</a> <br />
 </div>
 </p>
 </li>
