--- a/workEx.html
+++ b/workEx.html
@@ -53,8 +53,8 @@ Member of GERAD - Group for Research in Decision Analysis
 </ul>
  
 <ul>
-<li><p><b><a href="#">ELNA Medical, Montreal, Canada (2022-present)</a></b><br />
-<b>Chief AI Officer</b>
+<li><p><b><a href="#">CIUSSS West-Central Montreal (Jewish General Hospital), Montreal, Canada (2024-present)</a></b><br />
+<b>Chief of AI Strategy</b>
 </p>
 </li>
 </ul>
@@ -69,6 +69,13 @@ Member of GERAD - Group for Research in Decision Analysis
 <ul>
 <li><p><b><a href="#">IVADO Labs, Montreal, Canada (2020-present)</a></b><br />
 <b>Scientific Advisor in AI and Data Science</b>
+</p>
+</li>
+</ul>
+
+<ul>
+<li><p><b><a href="#">ELNA Medical, Montreal, Canada (2022-2024)</a></b><br />
+<b>Chief AI Officer</b>
 </p>
 </li>
 </ul>
