--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Associate Member, <a href="https://www.mcgill.ca/ece/"</a>Electrical and Compute
 Member of <a href="https://www.cirrelt.ca/"</a> CIRRELT </a> and <a href="https://www.gerad.ca/en"</a> GERAD </a> <br />
 Visiting Professor and Shubik Fellow, <a href="https://som.yale.edu/faculty-research/faculty-directory/maxime-cohen"</a> Yale School of Management</a>, <a href="https://www.yale.edu/"</a>Yale University</a> (2023-2024)<br />
 <br />
-<b>Chief AI Officer</b> @<a href="https://elnamedical.com/"</a> ELNA Medical </a> <br />
+<b>Chief of AI Strategy</b> @<a href="https://www.ciussswestcentral.ca/"</a> CIUSSS West-Central Montreal (Jewish General Hospital) </a> <br />
 Director of Artificial Intelligence @<a href="https://integral.partners/"</a> Intégral </a> <br />
 Scientific Advisor in AI and Data Science @<a href="https://ivadolabs.com/"</a> IVADO Labs </a> <br />
 Associate Director for Strategy and Partnership @<a href="https://conflictanalytics.queenslaw.ca/"</a> Conflict Analytics Lab</a> <br />
