--- a/teaching.html
+++ b/teaching.html
@@ -63,7 +63,7 @@ Excelling in the New World of Retail - Module on Data Analytics & Decision Makin
   
 <ul>
 <li><p><b><a href="">Operations Management - McGill University - 2020-2024 </a></b><br />
-Undergraduate core course (2 sections of 65 students each year). Evals: 4.9, 4.6, 4.8, 4.9, 4.7, 4.9, 4.8, 4.9 (out of 5)
+Undergraduate core course (2 sections of 65 students each year). Evals: 4.9, 4.6, 4.8, 4.9, 4.7, 4.9, 4.8, 4.9, 4.7, 4.8 (out of 5)
 </p>
 </li>
 </ul>
