--- a/awards.html
+++ b/awards.html
@@ -32,6 +32,8 @@
 <h3>Awards</h3>
 <ul>
 
+<li><p>2025: RETHINK Retail's Top Retail Influencers</p>
+    
 <li><p>2024: Top 2% of most cited authors in 2023 in both Business & Management and Operations Research</p>
   
 <li><p>2024: Second Place in the INFORMS TIMES Best Working Paper Competition</p>
