--- a/research.html
+++ b/research.html
@@ -490,31 +490,38 @@ Media coverage: <a href="https://www.analysisgroup.com/news-and-events/news/a-pr
 </p>
 </li>
 </ol>
+
+<ol start="49">
+<li><p><a href=""> "Digital Disruption in News Media: Evaluating the Canadian Online News Act"</a> <b>the Online News Act White Paper</b>,January 2025 <br />
+</div>
+</p>
+</li>
+</ol>
   
 <h3>Books and Book Chapters</h3>
 
-<ol start="49">
+<ol start="50">
 <li><p> M. C. Cohen, P. E. Gras, A. Pentecoste, R. Zhang, <a href="https://demandprediction.github.io/index.html">"Demand Prediction in Retail - A Practical Guide to Leverage Data and Predictive Analytics,"</a> <b>Springer</b> Series in Supply Chain Management 14, 2022 (ISBN 978-3030858551)
 </div>
 </p>
 </li>
 </ol>
 
-<ol start="50">
+<ol start="51">
 <li><p> L. Dubé, M. C. Cohen, N. Yang, B. Monla (Eds.), <a href="https://utorontopress.com/9781487542719/precision-retailing/">"Precision Retailing: Driving Results with Behavioral Insights and Data Analytics,"</a> <b>University of Toronto Press</b>, 2024 (ISBN 978-1487542719)
 </div>
 </p>
 </li>
 </ol>
 
-<ol start="51">
+<ol start="52">
 <li><p> N. Bandi, M. C. Cohen, S. Ray, <a href="https://www.nowpublishers.com/article/Details/TOM-111">"Behavioral Retail Operations: Tactics to Win Customers,"</a> <b>Foundations and Trends®</b> in Technology, Information and Operations Management, 2024 (ISBN 978-1-63828-437-6)
 </div>
 </p>
 </li>
 </ol>
   
-<ol start="52">
+<ol start="53">
 <li><p>M. C. Cohen, G. Perakis, <a href="https://link.springer.com/chapter/10.1007/978-3-030-31733-1_4">"Optimizing Promotions for Multiple Items in Supermarkets,"</a> Channel Strategies and Marketing Mix in a Connected World, (Eds.) S. Ray and S. Yin, <b>Springer</b> Series in Supply Chain Management 9, 2020 <br />
 </div>
 </p>
@@ -523,14 +530,14 @@ Media coverage: <a href="https://www.analysisgroup.com/news-and-events/news/a-pr
 
 <h3>Conference Publications</h3>
 
-<ol start="53">
+<ol start="54">
 <li><p><a href="https://maxccohen.github.io/CohenShimkin2010.pdf">"Decentralized Algorithms for Sequential Network Time Synchronization,"</a> with N. Shimkin, Proc. NETCOOP, 4<sup>th</sup> Workshop on Network Control and Optimization, Ghent, Belgium, Dec. 2010, pp. 97-104 <br />
 </div>
 </p>
 </li>
 </ol>
 
-<ol start="54">
+<ol start="55">
 <li><p><a href="https://maxccohen.github.io/SunSailorArt19nov06.pdf">"Sunsailor: Solar Powered UAV,"</a> with S. Tsach, L. Ankri, Y. Ehrlich, T. Goldenberg, H. Levy, I. Regev, A. Vladimirsky, A. 
 Weider, and Z. Yossef, Proc. 47<sup>th</sup> Israel Annual Conf. on Aerospace Sciences, Feb. 2007 <br />
 First price at the 2007 Technion Creativity in Science and Technology competition, Best student project in the 47th Israel Annual Conference on Aerospace Sciences <br />
