--- a/research.html
+++ b/research.html
@@ -478,7 +478,7 @@ Media coverage: <a href="https://www.analysisgroup.com/news-and-events/news/a-pr
 <h3>White Papers</h3>
 
 <ol start="47">
-<li><p><a href="https://maxccohen.github.io/AI-Medical-Scribes.pdf"> "AI Medical Scribes: A Revolution in Healthcare Documentation,"</a> with E. Toubiana, July 2024 <br />
+<li><p><a href="https://maxccohen.github.io/AI-Medical-Scribes.pdf"> "AI Medical Scribes: A Revolution in Healthcare Documentation,"</a> <b>the AI Medical Scribe White Paper</b> with E. Toubiana, July 2024 <br />
 </div>
 </p>
 </li>
