--- a/research.html
+++ b/research.html
@@ -592,6 +592,13 @@ Finalist in the 2023 INFORMS Behavioral Operations Management Best Working Paper
 </p>
 </li>
 </ul>
+
+<ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5131606">"Bundling or Discounting? Field Experiments for Healthy and Unhealthy Food,"</a> with N. Bandi and S. Ray, Submitted <br />
+</div>
+</p>
+</li>
+</ul>
   
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4722923"> "A General Framework for Robust Individualized Decision Learning with Sensitive Variables,"</a> with X. Tan, Z. Qi, and L. Tang, Submitted <br />
