--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <h1 ALIGN="left"> Maxime Cohen</h1>
 </div>
 <table class="imgtable"><tr><td>
-<img src="MCohen-2023-V2.png" alt="Maxime Cohen" height="339" width="298" />&nbsp;</td>
+<img src="MCohen-2025.png" alt="Maxime Cohen" height="339" width="298" />&nbsp;</td>
 <td align="left"><p><font size="+1.7"><b>Maxime C. Cohen</b></font><br />
 Professor, <a href="https://www.mcgill.ca/"</a> McGill University</a><br />
 <b>Scale AI Chair</b> in Data Science for Retail<br />
