--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@ My research and teaching have received 40+ awards, including <a href="https://po
 
 <h2>Editorial Work</h2>
 <p>Department Editor for <a href="https://www.poms.org/journal/"</a>Production and Operations Management</a> – Service Operations Department (2022-present)
+<p>Special Issue Editor for MBR on “Competition and Regulation of AI” (2025)
 <p>Department Editor for <a href="https://www.poms.org/journal/"</a>Production and Operations Management</a> – Supply Chain Management Department (2022-2024)
 <p>Deputy Editor for <a href="https://pubsonline.informs.org/journal/serv"</a>Service Science</a> (2024-present)
 <p>Special Issue Editor for <a href="https://pubsonline.informs.org/page/serv/calls-for-papers"</a>Service Science on "Impact of AI on Service Design and Delivery"</a> (2024-2025)
