--- a/awards.html
+++ b/awards.html
@@ -32,7 +32,7 @@
 <h3>Awards</h3>
 <ul>
 
-<li><p>2025: Nominee for Antitrust Writing Award by Concurrences and George Washington University</p>
+<li><p>2025: First Place for Antitrust Writing Award by Concurrences and George Washington University</p>
     
 <li><p>2025: RETHINK Retail's Top Retail Influencers</p>
     
