--- a/research.html
+++ b/research.html
@@ -468,7 +468,7 @@ Media coverage: <a href="https://www.marketwatch.com/story/ipo-disclosure-is-a-m
 
 <ol start="46">
 <li><p><a href="https://maxccohen.github.io/Algorithmic-vs-GenAI-Pricing.pdf"> "Assessing Algorithmic vs. Generative AI Pricing Tools,"</a> with T. Spittle and J. Royer, <b>Law360</b>, 2024 <br />
-Nominee for Antitrust Writing Award by Concurrences and George Washington University<br />
+First Place in Antitrust Writing Award by Concurrences and George Washington University<br />
 Media coverage: <a href="https://www.analysisgroup.com/news-and-events/news/a-pricing-tool-for-the-masses-analysis-group-authors-explore-the-use-of-llms-for-pricing-design-in-law360-article/">Analysis Group</a> <br />
 </div>
 </p>
