--- a/research.html
+++ b/research.html
@@ -341,6 +341,7 @@ Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/how-ai-can-tam
 <li><p><a href="https://maxccohen.github.io/Selecting-Cover-Images.pdf">"Selecting Cover Images for Restaurant Reviews: AI vs. Wisdom of the Crowd,"</a> with W. Khern-am-nuai, H. So, and Y. Adulyasak, <b>Manufacturing & Service Operations Management</b>, 26(1):330-349, 2024 <br />
 Finalist in the 2021 INFORMS Service Science Best Cluster Paper Award <br />
 <a href="https://maxccohen.github.io/Selecting-Cover-Images-Appendix.pdf">Online Appendix</a> <br />
+Media coverage: <a href="https://delve.mcgill.ca/read/using-ai-to-put-the-best-plate-forward/">Delve</a> <br />
 </div>
 </p>
 </li>
