--- a/awards.html
+++ b/awards.html
@@ -32,6 +32,8 @@
 <h3>Awards</h3>
 <ul>
 
+<li><p>2025: Master of Management Teaching Award at Desautels Faculty of Management, McGill University</p>
+    
 <li><p>2025: First Place in Antitrust Writing Award by Concurrences and George Washington University</p>
     
 <li><p>2025: RETHINK Retail's Top Retail Influencers</p>
