--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ I am the Scale AI Chair Professor and the Academic Director of the Bensadoun Sch
   
 <br /> <br />
 My core expertise lies at the intersection of <b>data science</b> and <b>operations</b>. I have worked on retail, ridesharing, airline, sustainability,
-cloud computing, online advertising, peer-to-peer lending, real estate, healthcare, and conflict analytics. I have collaborated with many companies including Google AI, Microsoft, Meta, Uber, Waze, Oracle Retail, IBM Research, Via, Spotify, Aldo Group, Couche-Tard/Circle K, Loblaws, Canadian Tire, L'Oréal, Cargo, and Staples and I serve on the advisory board of several startups. In each project, I have worked closely with the company to develop solutions 
+cloud computing, online advertising, peer-to-peer lending, real estate, healthcare, and conflict analytics. I have collaborated with many companies including Google AI, Microsoft, Meta, Uber, Waze, Amazon, Expedia, Oracle Retail, IBM Research, Via, Spotify, Aldo Group, Couche-Tard/Circle K, Loblaws, Canadian Tire, L'Oréal, Cargo, and Staples and I serve on the advisory board of several startups. In each project, I have worked closely with the company to develop solutions 
 using tools such as machine learning, deep learning, optimization, stochastic modeling, econometrics, and field experiments. More recently, I have worked with hundreds of physicians and business managers to guide them on how to responsibly adopt GenAI tools and customized AI agents to boost their productivity.  <!--I currently serve as a senior editor for the <a href="http://www.poms.org/journal/"</a>POMS</a> journal. -->
 
 <br /> <br />
