--- a/research.html
+++ b/research.html
@@ -625,7 +625,7 @@ Finalist in the 2024 INFORMS TIMES Best Working Paper Competition <br />
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4476326">"Vertical Product Location Effect on Sales: A Field Experiment in Convenience Stores,"</a> with Z. Jalali, N. Ertekin, and M. Gumus, Working paper <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4476326">"Revisiting the Eye-Level Effect: A Field Experiment in Convenience Stores,"</a> with Z. Jalali, N. Ertekin, and M. Gumus, Submitted <br />
 Accepted to the <i>2024 M&SOM Service Management SIG</i> <br />
 </div>
 </p>
