--- a/research.html
+++ b/research.html
@@ -595,6 +595,13 @@ Finalist in the 2023 INFORMS Behavioral Operations Management Best Working Paper
 </ul>
 
 <ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5246862">"Targeted Alerts to Improve Road Safety,"</a> with P. Adjiman, D. Melul Fresco, A. Jacquillat, and R. Sasson, Submitted <br />
+</div>
+</p>
+</li>
+</ul>
+  
+<ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5131606">"Bundling or Discounting? Field Experiments for Healthy and Unhealthy Food,"</a> with N. Bandi and S. Ray, Submitted <br />
 </div>
 </p>
