--- a/students.html
+++ b/students.html
@@ -54,15 +54,15 @@
   
 <li><p>Zahra Jalali (2024) - OM Ph.D. student at McGill Desautels (co-advisor with Mehmet Gumus). First position: Amazon, Research Scientist</p>
   
-<li><p>Sandeep Chitla - OM Ph.D. student at NYU (advisor: Srikanth Jagabathula)</p>
+<li><p>Doehun Kim (2025) – Postdoctoral fellow at McGill (co-advisor with Warut Khern-am-nuai). First position: Assistant Professor of Information Systems at Florida Atlantic University</p>
   
-<li><p>Nymisha Bandi - OM Ph.D. student at McGill Desautels (co-advisor with Saibal Ray)</p>
+<li><p>Sandeep Chitla (2025) - OM Ph.D. student at NYU (advisor: Srikanth Jagabathula)</p>
+  
+<li><p>Nymisha Bandi (2025) - OM Ph.D. student at McGill Desautels (co-advisor with Saibal Ray)</p>
 
+<li><p>Mehran Poursoltani (2025) – Postdoctoral fellow at McGill</p>
+    
 <li><p>Liting Chen – OM Ph.D. student at McGill Desautels (co-advisor with Sentao Miao)</p>
-
-<li><p>Mehran Poursoltani – Postdoctoral fellow at McGill</p>
-
-<li><p>Doehun Kim – Postdoctoral fellow at McGill (co-advisor with Warut Khern-am-nuai)</p>
   
 <li><p>Thesis committee: Claudio Sole (Polytechnique Montréal), Mehran Poursoltani (HEC Montréal), Recep Bekci (McGill), Yang Chen (Queen's University)</p>
 
