--- a/research.html
+++ b/research.html
@@ -600,6 +600,13 @@ Finalist in the 2023 INFORMS Behavioral Operations Management Best Working Paper
 </p>
 </li>
 </ul>
+
+<ul>
+<li><p><a href="">"A/B Testing Under Product Stockouts,"</a> with L. Chen and S. Miao, Submitted <br />
+</div>
+</p>
+</li>
+</ul>
   
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5131606">"Bundling or Discounting? Field Experiments for Healthy and Unhealthy Food,"</a> with N. Bandi and S. Ray, Submitted <br />
