--- a/research.html
+++ b/research.html
@@ -602,7 +602,7 @@ Finalist in the 2023 INFORMS Behavioral Operations Management Best Working Paper
 </ul>
 
 <ul>
-<li><p><a href="">"A/B Testing Under Product Stockouts,"</a> with L. Chen and S. Miao, Submitted <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5256420">"A/B Testing Under Product Stockouts,"</a> with L. Chen and S. Miao, Submitted <br />
 </div>
 </p>
 </li>
